Submissions page: fix/tweak sizing of record rows.
1. By correcting a grid definition, 'Add Proof' now fits on the same
line as the rest of the row, even with the platform field present.

2. The value fields should now fit on a single line regardless of
browser. It used to be too wide in Vivaldi for example.

3. The majority of the styling on this page was defined in the page's
own HTML file, with just a couple rules in fzero.css. Those couple of
rules have been moved in with the rest.

4. While we're at it, updated maxlength of millisecond and speed value
fields to reflect the exact max values (4 -> 3, 6 -> 4).

--- a/public/fzero.css
+++ b/public/fzero.css
@@ -1126,23 +1126,6 @@ p.header {
 }
 
 
-.page-client .record-row {
-  display: grid;
-  margin-bottom: 2px;
-  grid-template: auto auto / repeat(5, auto);
-}
-
-.page-client .proof-container {
-  padding: 2px;
-  border: 1px solid #b53b35;
-  margin-top: 6px;
-  margin-bottom: 6px;
-  background-color: #fffada;
-  grid-column-start: 1;
-  grid-column-end: span 5;
-  display: none;
-}
-
 .page-game .main-content {
   max-width: 960px;
   margin: 0px auto;
